# Tribe

./: CMakeLists.txt  Messages.sh  README  RELEASE_NOTES  RELEASE_NOTES.html  config-tribe.h.cmake  tribe.desktop  tribe_macros.h
cmake/modules/: FindLibPwquality.cmake
data/: all_kde_langpacks  cities.kml  configPageBundleData  configPagePkgData  postinstall.conf  timezones
etc/: postinstall.conf  release_notes.txt  tribe.desktop
etc/postinstall-functions/: helpers  job-configure-pacman  job-configure-sudoers~  job-configure-users  job-configure-users~  job-create-menulst  job-install-grub~  job-rcconf-daemons  job-setup-hardware  job-setup-xorg
launcher/: CMakeLists.txt
launcher/src/: TribeLauncher.cpp  TribeLauncher.h  main.cpp
launcher/src/worker/: CMakeLists.txt  Worker.cpp  Worker.h  main.cpp  org.chakraproject.tribelauncherworker.conf  org.chakraproject.tribelauncherworker.policy  org.chakraproject.tribelauncherworker.service.in  org.chakraproject.tribelauncherworker.xml
launcher/ui/: gui.ui  tribelauncher.qrc
lib/: CMakeLists.txt
lib/lib/fatlabel/.kdev4/.svn/: entries
lib/liblvm2-qt/: CMakeLists.txt
lib/liblvm2-qt/lib/: CMakeLists.txt  lv.cpp  lv.h  lvm.cpp  lvm.h  pv.cpp  pv.h  vg.cpp  vg.h
lib/pm/: CMakeLists.txt
lib/pm/src/backend/: corebackend.cpp  corebackendmanager.cpp
lib/pm/src/core/: devicescanner.cpp  devicescanner.h  operationrunner.h  operationstack.h  partition.h  partitiontable.cpp  partitiontable.h
lib/pm/src/ops/: createfilesystemoperation.h  resizeoperation.h
lib/pm/src/plugins/libparted/: CMakeLists.txt  libpartedbackend.cpp
lib/pm/src/util/: capacity.h  helpers.cpp
lib/src/: CMakeLists.txt
lib/src/backend/: corebackendmanager.cpp  corebackendmanager.h
lib/src/core/: devicescanner.h  operationrunner.h  operationstack.h  partition.h
lib/src/fs/: filesystem.h
lib/src/ops/: createfilesystemoperation.h  deleteoperation.h  newoperation.h  resizeoperation.h
lib/src/plugins/dummy/: CMakeLists.txt
lib/src/plugins/libparted/: libpartedbackend.cpp  pmlibpartedbackendplugin.desktop
lib/src/util/: capacity.h  helpers.cpp
pm/src/: CMakeLists.txt
pm/src/backend/: corebackend.h
pm/src/core/: copysourceshred.cpp  device.cpp  devicescanner.cpp
pm/src/fs/: filesystem.cpp  filesystem.h  filesystemfactory.h
pm/src/gui/: devicepropsdialog.h
pm/src/ops/: createpartitiontableoperation.h  deleteoperation.h  newoperation.h
pm/src/plugins/libparted/: pmlibpartedbackendplugin.desktop
pm/src/util/: capacity.cpp  report.h
scripts/: postinstall.sh  run-tribe.sh
scripts/postinstall-functions/: helpers  init  job-add-extra-mountpoint  job-cleanup-drivers  job-cleanup-l10n  job-configure-pacman  job-configure-users  job-create-initrd  job-create-menulst  job-initialize-target  job-install-burg  job-install-grub  job-install-grub2  job-pre-install  job-pre-remove  job-rcconf-daemons  job-rcconf-l10n  job-rcconf-network  job-regenerate-locales  job-setup-hardware  job-setup-xorg
src/: AbstractPage.cpp  AbstractPage.h  CrashHandler.cpp  CrashHandler.h  InstallationHandler.cpp  InstallationHandler.cpp~  InstallationHandler.h  MainWindow.cpp  MainWindow.cpp~  MainWindow.h  PMHandler.cpp  PMHandler.h  Screenshots.h  installationhandler.cpp  installationhandler.h  main.cpp  main.cpp~  mainwindow.cpp  mainwindow.h  pages.h  screenshots.h
src/pages/: BootloaderPage.cpp  BootloaderPage.h  FinishPage.cpp  FinishPage.cpp~  FinishPage.h  InstallationPage.cpp  InstallationPage.cpp~  InstallationPage.h  IntroPage.cpp  IntroPage.h  LicensePage.cpp  LicensePage.h  LocaleSelectorPage.cpp  LocaleSelectorPage.h  PartitioningPage.cpp  PartitioningPage.cpp~  PartitioningPage.h  ProgressWidget.cpp  ProgressWidget.h  ReadyInstallPage.cpp  ReadyInstallPage.h  ReleaseNotesPage.cpp  ReleaseNotesPage.h  SettingsPage.cpp  SettingsPage.h  UserCreationPage.cpp  UserCreationPage.h  bootloaderpage.cpp  configpage.cpp  configpage.h  installationpage.cpp  installationpage.h  localepage.cpp  localepage.h  partitionpage.cpp  partitionpage.h  releasenotespage.cpp  settingspage.cpp  settingspage.h  usercreationpage.cpp  (+1 more)
src/widgets/: UserCreationWidget.cpp  UserCreationWidget.h  avatardialog.cpp  userwidget.cpp  userwidget.h
translations/: ar.po  ast.po  bg.po  ca.po  ca@valencia.po  cs.po  de.po  el.po  es.po  eu.po  fi.po  fr.po  gl.po  hr.po  hu.po  id.po  it.po  ja.po  kk.po  nb.po  nl.po  pl.po  pt_BR.po  ro.po  ru.po  sl.po  sr.po  sr@latin.po  sv.po  tr.po  tribe.pot  tribe_ast.po  tribe_ca@valencia.po  tribe_cs.po  tribe_el.po  tribe_es.po  tribe_eu.po  tribe_hr.po  tribe_hu.po  tribe_it.po  (+11 more)
ui/: crashWindow.ui  createUserWidget.ui  tribe.qrc  tribe.qss  tribeBase.ui  tribeBootloader.ui  tribeConfiguration.ui  tribeFinish.ui  tribeInstallation.ui  tribeIntro.ui  tribeLicense.ui  tribeLocale.ui  tribePartition.ui  tribeProgressWidget.ui  tribeReadyInstall.ui  tribeReleaseNotes.ui  tribeRoot.ui  tribeSettings.ui  tribeUserCreation.ui
ui/pages/: base.ui  config.ui  partition.ui  settings.ui  usercreation.ui
ui/widgets/: avatardialog.ui  userwidget.ui
work/: tribePackageInstaller.ui
work/easy/: createUser.ui  localeSelector.ui  selectPartitions.ui
